Fix ColorPalette add color button miss aligned

--- a/src/css/Canvas.css
+++ b/src/css/Canvas.css
@@ -13,7 +13,7 @@
 .Canvas > .v-bar,
 .Canvas > .h-bar {
     background: var(--background2-color);
-    z-index: 10;
+    z-index: 3;
     position: absolute;
 }
 
