--- a/src/css/inputs/ColorInput.css
+++ b/src/css/inputs/ColorInput.css
@@ -8,11 +8,15 @@
   width: calc(var(--button-diameter) / 2);
   height: calc(var(--button-diameter) / 2);
   border-radius: calc(var(--button-diameter) / 4);
+  position: relative;
+  justify-content: center;
+  align-items: center;
 }
 
 .ColorInput input[type="color"] {
   opacity: 0;
-  width: calc(var(--button-diameter) / 2);
+  position: absolute;
+  height: 100%;
 }
 
 .ColorInput.dropdown > ul {
@@ -21,6 +25,11 @@
   max-height: 25vh;
   flex-wrap: wrap;
   left: var(--button-diameter);
+}
+
+.ColorInput.dropdown:focus-within > ul {
+  overflow-y: scroll;
+  position: absolute;
 }
 
 .ColorInput.dropdown:focus-within > ul {
